# AuralMind2

./: .codex.config.toml  .env  .gitignore  Dockerfile  MCP.md  README.md  auralmind.mastering.mcp.json  auralmind_match_maestro_v7.py  auralmind_match_maestro_v7_3.py  fastmcp.json  main.py  ollama.py  prefect.yaml  pyproject.toml  render.yaml  requirements.txt  server-info.json  server.py  weather.py
data/: Have You Heard of Me... (1).wav.asd
flows/: prefect_master_flow.py
resources/: mcp_docs.md  system_prompt.md
task_runner/: orchestrator.py
tools/: Filesystem-Server.json  __init__.py  auralmind_maestro.py  batch_trap_god_3d_master.py  test_pipeline.py
